[gd_scene load_steps=4 format=3 uid="uid://dk73llp40kxjc"]

[ext_resource type="FontFile" uid="uid://cai7s8vpiatwn" path="res://IBM Plex Mono/IBMPlexMono-Regular.ttf" id="1_k47c1"]
[ext_resource type="Script" path="res://rooms/game_room.gd" id="1_ntsd8"]
[ext_resource type="FontFile" uid="uid://dc7ceq4x56ua7" path="res://IBM Plex Mono/IBMPlexMono-16.ttf" id="3_2562a"]

[node name="GameRoom" type="PanelContainer"]
offset_right = 250.0
offset_bottom = 200.0
script = ExtResource("1_ntsd8")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="Rows" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(250, 200)
layout_mode = 2

[node name="RoomName" type="Label" parent="MarginContainer/Rows"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_k47c1")
theme_override_font_sizes/font_size = 24
text = "Room Name"
horizontal_alignment = 1

[node name="RoomDescription" type="Label" parent="MarginContainer/Rows"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_k47c1")
theme_override_font_sizes/font_size = 16
text = "This is the description of the room."
autowrap_mode = 2

[node name="ExitDescriptions" type="Label" parent="MarginContainer/Rows"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_2562a")
theme_override_font_sizes/font_size = 9
autowrap_mode = 2
